# rsvg-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  Gir.toml  default.nix
.github/workflows/: main.yml
examples/: gtk.rs
rsvg-sys/: Cargo.toml  build.rs
rsvg-sys/src/: lib.rs
rsvg-sys/tests/: abi.rs  constant.c  layout.c
src/: dimension_data.rs  handle.rs  lib.rs  position_data.rs
src/auto/: enums.rs  flags.rs  handle.rs  mod.rs
