[package]
name = "rsvg"
version = "0.9.0"
authors = ["selaux"]
description = "Rust bindings for the Rsvg library"
repository = "https://github.com/selaux/rsvg-rs"
license = "MIT"

keywords = ["rsvg", "svg", "gtk-rs"]
include = ["src/**/*", "Cargo.toml"]

[lib]
name = "rsvg"

[dependencies]
libc = "0.2"
bitflags = "1.2"
glib = "0.10"
glib-sys = "0.10"
gobject-sys = "0.10"
gdk-pixbuf = "0.9"

[dev-dependencies]
image = "0.23.0"
imageproc = "0.22.0"
gtk = "0.9"

[dependencies.cairo-rs]
version = "0.9"
features = ["png"]

[dependencies.rsvg-sys]
version = "0.9.0"
path = "./rsvg-sys"
