[package]
name = "rsvg"
version = "0.9.0"
authors = ["selaux"]
description = "Rust bindings for the Rsvg library"
repository = "https://github.com/selaux/rsvg-rs"
license = "MIT"
edition = "2018"

keywords = ["rsvg", "svg", "gtk-rs"]
include = ["src/**/*", "Cargo.toml"]

[lib]
name = "rsvg"

[dependencies]
libc = "0.2"
bitflags = "1.2"
glib = "0.15"
glib-sys = "0.15"
gobject-sys = "0.15"
gdk-pixbuf = "0.15"

[dev-dependencies]
image = "0.23.0"
imageproc = "0.22.0"
gtk = "0.15"

[dependencies.cairo-rs]
version = "0.15"
features = ["png"]

[dependencies.ffi]
package = "rsvg-sys"
version = "0.15.0"
path = "./rsvg-sys"
