[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
atk-sys = "0.8.0"
bitflags = "1.0.4"
cairo-sys-rs = "0.8.0"
gdk-pixbuf-sys = "0.8.0"
gdk-sys = "0.8.0"
gio-sys = "0.8.0"
glib-sys = "0.8.0"
gobject-sys = "0.8.0"
libc = "0.2"
pango-sys = "0.8.0"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []

[lib]
name = "rsvg_sys"

[package]
authors = ["selaux"]
build = "build.rs"
description = "Rust bindings for the Rsvg library (ffi)"
license = "MIT"
links = "rsvg"
name = "rsvg-sys"
repository = "https://github.com/selaux/rsvg-rs"
version = "0.6.0"
