[build-dependencies]
pkg-config = "0.3.7"
system-deps = "3"

[dependencies]
atk-sys = "0.14"
bitflags = "1.2"
cairo-sys-rs = "0.14"
gdk-pixbuf-sys = "0.14"
gdk-sys = "0.14"
gio-sys = "0.14"
glib-sys = "0.14"
gobject-sys = "0.14"
libc = "0.2"
pango-sys = "0.14"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []

[lib]
name = "rsvg_sys"

[package]
authors = ["selaux"]
build = "build.rs"
description = "Rust bindings for the Rsvg library (ffi)"
license = "MIT"
links = "rsvg"
name = "rsvg-sys"
repository = "https://github.com/selaux/rsvg-rs"
version = "0.14.0"
edition = "2018"
[package.metadata.system-deps.librsvg_2_0]
name = "librsvg-2.0"
version = "2.36"
[package.metadata.docs.rs]
features = ["dox"]
